Front/frontend/src/components/Form.css
form {
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 10px;
    background-color: #f9f9f9;
  }
  
  form h3, form h4 {
    text-align: center;
    margin-bottom: 20px;
  }
  
  form div {
    margin-bottom: 15px;
  }
  
  form .subtopic {
    margin-top: 20px; /* Add margin to space out subtopics */
    margin-bottom: 20px; /* Reduce bottom margin for consistency */
  }
  
  form label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
  }
  
  form input[type="text"],
  form textarea {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-sizing: border-box;
  }
  
  form button {
    display: block;
    width: 100%;
    padding: 10px;
    background-color: #4CAF50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
  }
  
  form button:hover {
    background-color: #45a049;
  }

